tests/parser/errors/playerdec_no_lbrace.gbl
player p dollars: 1$
